<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:focusable="true"
        android:clickable="true">

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            app:srcCompat="@drawable/ic_navigation"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"/>

    <TextView
            android:id="@+id/tvOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="300dp"
            android:adjustViewBounds="true"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:layout_marginEnd="@dimen/activity_margin_horizontal"
            android:src="@drawable/nocover"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
            android:id="@+id/imageViewCancel"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/cancel"
            android:contentDescription="@string/cancel"
            android:layout_margin="@dimen/activity_margin_horizontal"
            app:layout_constraintRight_toRightOf="@+id/imageViewPhoto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageViewPhoto"/>

    <ImageView
            android:id="@+id/imageViewReload"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_autorenew"
            android:contentDescription="@string/reload"
            android:layout_margin="@dimen/activity_margin_horizontal"
            app:layout_constraintRight_toLeftOf="@+id/imageViewCancel"
            app:layout_constraintRight_toRightOf="@+id/imageViewPhoto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageViewPhoto"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto"
            android:paddingStart="@dimen/activity_margin_horizontal"
            android:paddingEnd="@dimen/activity_margin_horizontal">


        <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:padding="0dp">

            <TextView
                    android:id="@+id/textViewCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:layout_toStartOf="@+id/textViewLikes"
                    android:layout_alignParentStart="true"
            />

            <TextView
                    android:id="@+id/textViewLikes"
                    android:text="@string/likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="@dimen/activity_margin_horizontal"
                    android:paddingEnd="@dimen/activity_margin_horizontal"
                    android:layout_marginEnd="@dimen/activity_margin_medium"
            />
        </RelativeLayout>


        <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:padding="0dp">

            <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    tools:src="@drawable/profile35"
                    android:contentDescription="@string/app_name"
                    android:layout_marginEnd="@dimen/activity_margin_horizontal"
            />

            <TextView
                    android:id="@+id/textViewAvatar"
                    tools:text="Author name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_20"
                    android:layout_toEndOf="@+id/imageViewAvatar"
            />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
